--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <!--Often a reversed company domain name, here you could use something like below -->
-    <groupId>kea.sem3.rename_me</groupId>
+    <groupId>cars</groupId>
     <!-- The artifactId is the base package name used in the project -->
-    <artifactId>dat3.renameme</artifactId>
+    <artifactId>cars</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Any name you like, that makes sense for the project</name>
     <description>
